--- a/client/views/index.html
+++ b/client/views/index.html
@@ -100,5 +100,9 @@
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
 <script src="/js/lib/ui-bootstrap-tpls-0.4.0.min.js"></script>
+
+<!-- Util -->
+<script src="/js/lib/ng-infinite-scroll.min.js"></script>
+
 </body>
 </html>
