--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -20,29 +20,33 @@
                 <h5 class="zeroMargin ">Author:</h5>
                 <a href="#" class="zeroMargin">Firstname Lastname</a>
             </div>
+            <div>
+                <h5 class="zeroMargin ">Created in:</h5>
+                <span class="zeroMargin">01/01/2013</span>
+              </div>
             <div class="clear marginTop"><h5 class="zeroMargin">Subject:</h5>
 
                 <ul class="zeroMargin">
-                    <li class="sidebarItem">item n. 1</li>
-                    <li class="sidebarItem">item n. 2</li>
-                    <li class="sidebarItem">item number 3</li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
 
             </div>
             <div class="clear marginTop"><h5 class="zeroMargin">Objectives:</h5>
 
                 <ul class="zeroMargin">
-                    <li class="sidebarItem">item n. 1</li>
-                    <li class="sidebarItem">item n. 2</li>
-                    <li class="sidebarItem">item number 3</li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
             </div>
             <div class="clear marginTop"><h5 class="zeroMargin">Pre-Requisites:</h5>
 
                 <ul class="zeroMargin">
-                    <li class="sidebarItem">item n. 1</li>
-                    <li class="sidebarItem">item n. 2</li>
-                    <li class="sidebarItem">item number 3</li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
             </div>
             <div class="clear marginTop">
@@ -52,17 +56,17 @@
             <div class="clear marginTop"><h5 class=" zeroMargin">Tags:</h5>
 
                 <ul class="zeroMargin">
-                    <li class="sidebarItem">item n. 1</li>
-                    <li class="sidebarItem">item n. 2</li>
-                    <li class="sidebarItem">item number 3</li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
 
             </div>
             <div class="clear marginTop"><h5 class="zeroMargin">Related Designs:</h5>
                 <ul class="zeroMargin">
-                    <li class="sidebarItem">item n. 1</li>
-                    <li class="sidebarItem">item n. 2</li>
-                    <li class="sidebarItem">item number 3</li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
             </div>
 
@@ -85,7 +89,7 @@
             </div>
 
             <div id="tabContent">
-
+                          <div></div>
             </div>
             </div>
             <!--Body content-->
