angular controller and service for ld view page, also fix refresh issue by adding forward slash to css and avatar img in index.html

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="">
     <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch:700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-    <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="css/app.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/css/app.css" rel="stylesheet">
 
 </head>
 
@@ -62,7 +62,7 @@
               <a id="userActionsMenu" href="#" class="dropdown-toggle" data-toggle="dropdown">
             <li class="dropdown">
                   <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
-                  <img src="img/avatar_sample.png" alt="User Avatar" class="img-rounded user-pic"/>
+                  <img src="/img/avatar_sample.png" alt="User Avatar" class="img-rounded user-pic"/>
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
@@ -95,6 +95,8 @@
 <script src="/js/auth/AuthDirective.js"></script>
 <script src="/js/ld/HomeController.js"></script>
 <script src="/js/ld/HomeService.js"></script>
+<script src="/js/ld/LearningDesignController.js"></script>
+<script src="/js/ld/LearningDesignService.js"></script>
 
 <!-- Bootstrap -->
 <script src="/js/lib/jquery.js"></script>
