--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,7 +1,7 @@
 <div id="ldlist" class="row top-margin">
 
   <!-- LD BOX START -->
-  <div ng-repeat="learningDesign in learningDesigns" class="ld-border ld-item">
+  <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item">
     <div class="ld-top">
       A1<a ng-href="#/ld/{{learningDesign.ld_id}}" class="float-right"><i class="icon-arrow-right icon-white"></i></a>
     </div>
