--- a/client/css/app.css
+++ b/client/css/app.css
@@ -343,7 +343,7 @@ padding: 3px;
     font-size: 14px;
     color: #FFFFFF;
     text-shadow: 0 -1px 1px #999999;
-    display: inline;
+display: inline;
 }
 
 .nav-closed:hover .nav-username {
@@ -369,6 +369,8 @@ padding: 3px;
     margin: 10px 10px 0 0 ;
 
 }
+
+
 
 #userActionsMenu:hover {
     text-decoration: none;
@@ -424,9 +426,21 @@ padding: 3px;
     text-shadow: 0 1px 1px rgba(255, 255, 255, 1), 0 -1px 1px rgba(255, 255, 255, 0.65);
 }
 
-#loggedInUserName {
+li#loggedInUserName.nav-username {
     font-weight: bold;
+    width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    text-align: right;
+    padding-right: 3px;
 }
+
+.navbar .nav.pull-right {
+    margin-top: -10px;
+    padding-top: 0;
+}
+
 
 .dropdown-menu {
     border: 3px solid #FFFFFF;
