--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -51,7 +51,7 @@
             </div>
             <div class="clear marginTop">
                 <h5 class="zeroMargin">Students' Description:</h5>
-                <span class="sidebarItem">{{ learningDesign.ld_students_profile }}</span>
+                <span >{{ learningDesign.ld_students_profile }}</span>
             </div>
             <div class="clear marginTop"><h5 class=" zeroMargin">Tags:</h5>
 
