--- a/client/views/index.html
+++ b/client/views/index.html
@@ -50,7 +50,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="#"><img src="../img/logo.png" alt="Ledita Logo" /></a>
+        <a class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo" /></a>
         <div class="nav-collapse collapse">
          <ul class="nav-top-pad nav">
           <li><button type="button" class="btn btn-small btn-menu">Explore LDs</button></li>
