--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -67,9 +67,18 @@
                     <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
                     <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
                     <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 1</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item n. 2</a></li>
+                    <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">item number 3</a></li>
                 </ul>
             </div>
-
+            <div class="clearfix"></div>
+            <div id="model">
+                <a href="#">
+                <img src="../../img/model.png" class="btnModelImg">
+                <h5 class="btnModel">USE THIS DESIGN AS A MODEL</h5>
+                    </a>
+            </div>
             <!--Sidebar content-->
         </div>
         <div id="content" class="span9">
@@ -87,6 +96,7 @@
                      <h4><span class="round">A1</span> {{ learningDesign.ld_scope }}</h4>
                 </div>
             </div>
+
 
             <div id="tabContent">
                           <div></div>
