--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -17,11 +17,11 @@
               </div>
             -->
             <div>
-                <h5 class="zeroMargin ">Author:</h5>
+                <h5 class="zeroMargin date">Author:</h5>
                 <a href="#" class="zeroMargin">{{ learningDesign.user_name}} {{ learningDesign.user_last_name}}</a>
             </div>
             <div>
-                <h5 class="zeroMargin ">Created in:</h5>
+                <h5 class="zeroMargin date ">Created in:</h5>
                 <span class="zeroMargin">{{learningDesign.ld_creation_date | date:'yyyy-MM-dd'}}</span>
               </div>
             <div class="clear marginTop"><h5 class="zeroMargin">Subject:</h5>
