--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,84 +1,97 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="ledita-app">
 <head>
-  <meta charset="utf-8">
-  <title>LEDITA: Learning Design for Italian Language</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <title>LEDITA: Learning Design for Italian Language</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch:700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     <link href="/css/bootstrap.css" rel="stylesheet">
-  <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="/css/app.css" rel="stylesheet">
+    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
 
 </head>
 
 <body ng-cloak ng-controller="AppCtrl">
 
-  <!-- Begin Nav Bar Anon View -->
-  <div id="navBarAnon" data-access-level='{{ accessLevels.anon }}' ng-controller="LoginCtrl" class="navbar navbar-inverse navbar-fixed-top">
+<!-- Begin Nav Bar Anon View -->
+<div id="navBarAnon" data-access-level='{{ accessLevels.anon }}' ng-controller="LoginCtrl"
+     class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-      <div class="container">
-        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-         <span class="icon-white icon-user"></span>
-        </button>
-        <a class="brand" href="#"><img src="../img/logo.png" alt="Ledita Logo" /></a>
-          <div class="nav-collapse collapse">
+        <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-white icon-user"></span>
+            </button>
+            <a class="brand" href="#"><img src="../img/logo.png" alt="Ledita Logo"/></a>
 
-          <form ng-submit="login()" class="navbar-form pull-right">
+            <div class="nav-collapse collapse">
+
+                <form ng-submit="login()" class="navbar-form pull-right">
             <span id="loginError" ng-show="error" class="alert alert-error centered">
                   {{ error }}
               </span>
 
-              <input ng-model="username" class="span2" type="email" placeholder="Email" required="">
-            <input ng-model="password" class="span2" type="password" placeholder="Password" required="">
-            <button id="loginButton" type="submit" class="btn">Login</button>
-              <span id="pwRec"><a href="#">Forgot your password?</a></span>
-          </form>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </div><!-- End Nav Bar Anon View -->
-
-  <!-- Begin Nav Bar User View -->
-  <div id="navBarUser" data-access-level='{{ accessLevels.user }}' class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-        </button>
-        <a class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo" /></a>
-        <div class="nav-collapse collapse">
-         <ul class="nav-top-pad nav">
-          <li><button type="button" class="btn btn-small btn-menu">Explore LDs</button></li>
-          <li><button type="button" class="btn btn-small btn-menu">Find Users</button></li>
-          <li><button type="button" class="btn btn-small btn-menu">Create a New LD</button></li>
-        </ul>
-        <div class="pull-right nav-closed">
-          <ul class="nav pull-right">
-              <a id="userActionsMenu" href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <li class="dropdown">
-
-                  <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
-                  <img src="/img/avatar_sample.png" alt="User Avatar" class="img-rounded user-pic"/>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="icon-cog"></i> Preferences</a></li>
-                <li><a href="#"><i class="icon-envelope"></i> Contact Support</a></li>
-                <li class="divider"></li>
-                <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Logout</a></li>
-              </ul>
-            </li>
-          </ul>
+                    <input ng-model="username" class="span2" type="email" placeholder="Email" required="">
+                    <input ng-model="password" class="span2" type="password" placeholder="Password" required="">
+                    <button id="loginButton" type="submit" class="btn">Login</button>
+                    <span id="pwRec"><a href="#">Forgot your password?</a></span>
+                </form>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-      </div><!--/.nav-collapse -->
     </div>
-  </div>
-</div><!-- End Nav Bar User View -->
+</div>
+<!-- End Nav Bar Anon View -->
+
+<!-- Begin Nav Bar User View -->
+<div id="navBarUser" data-access-level='{{ accessLevels.user }}' class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo"/></a>
+
+            <div class="nav-collapse collapse">
+                <ul class="nav-top-pad nav">
+                    <li>
+                        <button type="button" class="btn btn-small btn-menu">Explore LDs</button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-small btn-menu">Find Users</button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-small btn-menu">Create a New LD</button>
+                    </li>
+                </ul>
+                <div class="pull-right nav-closed">
+                    <ul class="nav pull-right">
+                        <a id="userActionsMenu" href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <li class="dropdown">
+
+                            <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
+                            <img src="/img/avatar_sample.png" alt="User Avatar" class="img-rounded user-pic"/>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#"><i class="icon-cog"></i> Preferences</a></li>
+                            <li><a href="#"><i class="icon-envelope"></i> Contact Support</a></li>
+                            <li class="divider"></li>
+                            <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Logout</a></li>
+                        </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+<!-- End Nav Bar User View -->
 
 <div ng-view class="container"></div>
 
