Fixed login page style issue

--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,4 +1,4 @@
-<div id="ldlist" class="row top-margin">
+<div id="ldlist" class="row top-margin zeroLeft">
 
   <!-- LD BOX START -->
   <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item">
