--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -88,7 +88,7 @@
             <div id="contentBody">
             <div id="contentHeader">
                 <div class="float-left">
-                    <h4 class="inline"><a href="#"><img ng-src="../img/emptyStar.png" class="star"></img></a>{{ learningDesign.ld_name }}</h4>
+                    <h4 class="inline"><a href="#"><img ng-src="../img/emptyStar.png" class="star"></a>{{ learningDesign.ld_name }}</h4>
                 </div>
                 <div class="float-right">
                      <h4><span class="round">A1</span> {{ learningDesign.ld_scope }}</h4>
