'Topic' instead 'Subject'

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -24,7 +24,7 @@
                 <h5 class="zeroMargin date ">Created in:</h5>
                 <span class="zeroMargin">{{learningDesign.ld_creation_date | date:'yyyy-MM-dd'}}</span>
               </div>
-            <div class="clear marginTop"><h5 class="zeroMargin">Subject:</h5>
+            <div class="clear marginTop"><h5 class="zeroMargin">Topics:</h5>
 
                 <ul ng-repeat="subject in learningDesign.subjects" class="zeroMargin subjects">
                     <li class="sidebarItem"><a ng-href="#" class="sidebarItemLink">{{subject.subject_name}}</a></li>
